--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data Wrangler flow upload and a feature group will have this unique suffix: 07-01-25-47-c99ecc2d\n"
+      "Data Wrangler flow upload and a feature group will have this unique suffix: 07-04-20-04-a58253ce\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,25 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-02-07 01:27:28--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data\n",
+      "--2022-02-07 04:20:08--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 191873 (187K) [application/x-httpd-php]\n",
       "Saving to: ‘abalone.data’\n",
       "\n",
-      "abalone.data        100%[===================>] 187.38K   893KB/s    in 0.2s    \n",
+      "abalone.data        100%[===================>] 187.38K   914KB/s    in 0.2s    \n",
       "\n",
-      "2022-02-07 01:27:29 (893 KB/s) - ‘abalone.data’ saved [191873/191873]\n",
+      "2022-02-07 04:20:09 (914 KB/s) - ‘abalone.data’ saved [191873/191873]\n",
       "\n",
-      "--2022-02-07 01:27:29--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.names\n",
+      "--2022-02-07 04:20:09--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.names\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -296,7 +296,7 @@
       "\n",
       "abalone.names       100%[===================>]   4.22K  --.-KB/s    in 0s      \n",
       "\n",
-      "2022-02-07 01:27:29 (324 MB/s) - ‘abalone.names’ saved [4319/4319]\n",
+      "2022-02-07 04:20:10 (213 MB/s) - ‘abalone.names’ saved [4319/4319]\n",
       "\n"
      ]
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "4         0.055      7  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +503,8 @@
      "output_type": "stream",
      "text": [
       "upload: ../dataset/abalone.names to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.names\n",
-      "upload: ../dataset/abalone.data to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.data\n",
-      "upload: ../dataset/abalone.csv to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.csv\n"
+      "upload: ../dataset/abalone.csv to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.csv\n",
+      "upload: ../dataset/abalone.data to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.data\n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,14 +710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ./dw2-flow.flow to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dw-flow/dw2-flow-07-01-25-47-c99ecc2d.flow\n"
+      "upload: ./dw2-flow.flow to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dw-flow/dw2-flow-07-04-20-04-a58253ce.flow\n"
      ]
     }
    ],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        " 'sex_F': 'float'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        " {'name': 'record_time', 'type': 'float'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,23 +974,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'FeatureGroupArn': 'arn:aws:sagemaker:us-east-1:569441333767:feature-group/fg-abalone-07-01-25-47-c99ecc2d',\n",
-       " 'ResponseMetadata': {'RequestId': '63a71ef7-7d9d-4925-83f5-2608fec6e065',\n",
+       "{'FeatureGroupArn': 'arn:aws:sagemaker:us-east-1:569441333767:feature-group/fg-abalone-07-04-20-04-a58253ce',\n",
+       " 'ResponseMetadata': {'RequestId': 'c31f9f26-b523-43de-bbf9-3400fe81df7d',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '63a71ef7-7d9d-4925-83f5-2608fec6e065',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'c31f9f26-b523-43de-bbf9-3400fe81df7d',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '108',\n",
-       "   'date': 'Mon, 07 Feb 2022 01:35:48 GMT'},\n",
+       "   'date': 'Mon, 07 Feb 2022 04:21:01 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1028,9 +1028,7 @@
      "text": [
       "Waiting for Feature Group Creation\n",
       "Waiting for Feature Group Creation\n",
-      "Waiting for Feature Group Creation\n",
-      "Waiting for Feature Group Creation\n",
-      "FeatureGroup FG-abalone-07-01-25-47-c99ecc2d successfully created.\n"
+      "Waiting for Feature Group Creation\n"
      ]
     }
    ],
@@ -1068,52 +1066,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'FeatureGroupArn': 'arn:aws:sagemaker:us-east-1:569441333767:feature-group/fg-abalone-07-01-25-47-c99ecc2d',\n",
-       " 'FeatureGroupName': 'FG-abalone-07-01-25-47-c99ecc2d',\n",
-       " 'RecordIdentifierFeatureName': 'record_id',\n",
-       " 'EventTimeFeatureName': 'record_time',\n",
-       " 'FeatureDefinitions': [{'FeatureName': 'length', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'diameter', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'height', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'whole_weight', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'shucked_weight', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'viscera_weight', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'shell_weight', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'rings', 'FeatureType': 'Integral'},\n",
-       "  {'FeatureName': 'sex_M', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'sex_I', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'sex_F', 'FeatureType': 'Fractional'},\n",
-       "  {'FeatureName': 'record_id', 'FeatureType': 'Integral'},\n",
-       "  {'FeatureName': 'record_time', 'FeatureType': 'Fractional'}],\n",
-       " 'CreationTime': datetime.datetime(2022, 2, 7, 1, 35, 47, 967000, tzinfo=tzlocal()),\n",
-       " 'OfflineStoreConfig': {'S3StorageConfig': {'S3Uri': 's3://sagemaker-us-east-1-569441333767',\n",
-       "   'ResolvedOutputS3Uri': 's3://sagemaker-us-east-1-569441333767/569441333767/sagemaker/us-east-1/offline-store/FG-abalone-07-01-25-47-c99ecc2d-1644197747/data'},\n",
-       "  'DisableGlueTableCreation': False,\n",
-       "  'DataCatalogConfig': {'TableName': 'fg-abalone-07-01-25-47-c99ecc2d-1644197747',\n",
-       "   'Catalog': 'AwsDataCatalog',\n",
-       "   'Database': 'sagemaker_featurestore'}},\n",
-       " 'RoleArn': 'arn:aws:iam::569441333767:role/mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR',\n",
-       " 'FeatureGroupStatus': 'Created',\n",
-       " 'ResponseMetadata': {'RequestId': '74f69e64-368c-4c8f-b03a-e101b68cbe86',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '74f69e64-368c-4c8f-b03a-e101b68cbe86',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '1917',\n",
-       "   'date': 'Mon, 07 Feb 2022 01:36:18 GMT'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_group.describe()"
    ]
@@ -1127,18 +1082,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared query SELECT * FROM \"fg-abalone-07-01-25-47-c99ecc2d-1644197747\"\n",
-      "AthenaQuery(catalog='AwsDataCatalog', database='sagemaker_featurestore', table_name='fg-abalone-07-01-25-47-c99ecc2d-1644197747', sagemaker_session=<sagemaker.session.Session object at 0x7fea7c638d90>, _current_query_execution_id=None, _result_bucket=None, _result_file_prefix=None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build SQL query to features group\n",
     "fs_query = feature_group.athena_query()\n",
@@ -1150,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,64 +1112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>length</th>\n",
-       "      <th>diameter</th>\n",
-       "      <th>height</th>\n",
-       "      <th>whole_weight</th>\n",
-       "      <th>shucked_weight</th>\n",
-       "      <th>viscera_weight</th>\n",
-       "      <th>shell_weight</th>\n",
-       "      <th>rings</th>\n",
-       "      <th>sex_m</th>\n",
-       "      <th>sex_i</th>\n",
-       "      <th>sex_f</th>\n",
-       "      <th>record_id</th>\n",
-       "      <th>record_time</th>\n",
-       "      <th>write_time</th>\n",
-       "      <th>api_invocation_time</th>\n",
-       "      <th>is_deleted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [length, diameter, height, whole_weight, shucked_weight, viscera_weight, shell_weight, rings, sex_m, sex_i, sex_f, record_id, record_time, write_time, api_invocation_time, is_deleted]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fs_df"
    ]
@@ -1246,37 +1137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'data_bucket' (str)\n",
-      "Stored 'dw_flow_file_url' (str)\n",
-      "Stored 'dw_output_name' (str)\n",
-      "Stored 'feature_group_name' (str)\n",
-      "Stored 's3_data_prefix' (str)\n",
-      "Stored 's3_flow_prefix' (str)\n",
-      "Stored 's3_fs_query_output_prefix' (str)\n",
-      "Stored 'abalone_dataset_file_name' (str)\n",
-      "Stored 'abalone_dataset_local_url' (str)\n",
-      "Stored variables and their in-db values:\n",
-      "abalone_dataset_file_name             -> 'abalone.csv'\n",
-      "abalone_dataset_local_url             -> '../dataset/abalone.csv'\n",
-      "data_bucket                           -> 'sagemaker-us-east-1-569441333767'\n",
-      "domain_id                             -> 'd-uf1m5smfybav'\n",
-      "dw_flow_file_url                      -> 's3://sagemaker-us-east-1-569441333767/feature-sto\n",
-      "dw_output_name                        -> 'c8880ed5-b8a0-4375-899b-1c4d86828152.default'\n",
-      "execution_role                        -> 'arn:aws:iam::569441333767:role/mod-6297809195fe48\n",
-      "feature_group_name                    -> 'FG-abalone-07-01-25-47-c99ecc2d'\n",
-      "s3_data_prefix                        -> 'sagemaker-us-east-1-569441333767/feature-store-in\n",
-      "s3_flow_prefix                        -> 'sagemaker-us-east-1-569441333767/feature-store-in\n",
-      "s3_fs_query_output_prefix             -> 'sagemaker-us-east-1-569441333767/feature-store-in\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%store data_bucket\n",
     "%store dw_flow_file_url\n",
