remove portfolio stack error

--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e361c71d",
+   "id": "9df11c84",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf387d3",
+   "id": "6cf8052f",
    "metadata": {},
    "source": [
     "# 0. 기존 변수 로딩"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "236cd0d7",
+   "id": "987968ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7926ac76",
+   "id": "4954ae46",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d7929a6",
+   "id": "412c9928",
    "metadata": {},
    "source": [
     "## 1.1 sm-project-sc-portfolio.yaml  파일 다운로드 \n",
@@ -58,15 +58,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "84579639",
+   "id": "8edd99e9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-07 03:15:31       7205 sm-project-sc-portfolio.yaml\n",
-      "download: s3://sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
+      "2022-02-07 05:59:28       7210 sm-project-sc-portfolio.yaml\n",
+      "download: s3://sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16d838d",
+   "id": "96a9fcf3",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f911ea1",
+   "id": "0893a1ca",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30207dd1",
+   "id": "31e3d230",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 파라미터\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c7c22a5d",
+   "id": "4f69a4e8",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20bdaaea",
+   "id": "f3f69abf",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 생성될 리소스\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec15c5c9",
+   "id": "685644b4",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
       "        \u001b[94mDescription\u001b[39;49;00m: SageMaker project to transform and ingest features into a feature\n",
       "          group\n",
       "        \u001b[94mInfo\u001b[39;49;00m:\n",
-      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
+      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
       "      \u001b[94mTags\u001b[39;49;00m:\n",
       "      - \u001b[94mKey\u001b[39;49;00m: sagemaker:studio-visibility\n",
       "        \u001b[94mValue\u001b[39;49;00m: \u001b[33m'\u001b[39;49;00m\u001b[33mtrue\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\n"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd29d82",
+   "id": "8a2a5951",
    "metadata": {},
    "source": [
     "## 1.3 이외 생성될 리소스\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6efd370e",
+   "id": "da6ca511",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8fab153",
+   "id": "8f45f394",
    "metadata": {},
    "source": [
     "# 2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
@@ -416,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cabc2725",
+   "execution_count": 7,
+   "id": "e896ef77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6c2d7818",
+   "execution_count": 8,
+   "id": "58d7a754",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bucket_name : sagemaker-us-east-1-569441333767\n",
+      "bucket_name : sagemaker-ap-northeast-2-018763497627\n",
       "stack_name : sm-project-sc-portfolio\n",
-      "Bucket Region : us-east-1\n",
-      "SageMaker Studio Domain ID : d-uf1m5smfybav\n",
-      "SageMaker Execution Role : arn:aws:iam::569441333767:role/mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n",
-      "CF File:  : https://s3.us-east-1.amazonaws.com/sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+      "Bucket Region : ap-northeast-2\n",
+      "SageMaker Studio Domain ID : d-lnzveulicvk5\n",
+      "SageMaker Execution Role : arn:aws:iam::018763497627:role/mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W\n",
+      "CF File:  : https://s3.ap-northeast-2.amazonaws.com/sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
       "{\n",
-      "    \"StackId\": \"arn:aws:cloudformation:us-east-1:569441333767:stack/sm-project-sc-portfolio/54a6fe20-87c5-11ec-8b46-0a1393eb7b59\"\n",
+      "    \"StackId\": \"arn:aws:cloudformation:ap-northeast-2:018763497627:stack/sm-project-sc-portfolio/eb812c80-87e3-11ec-88ff-063ffc34a318\"\n",
       "}\n"
      ]
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acda9da8",
+   "id": "326a28c5",
    "metadata": {},
    "source": [
     "## 2.1 클라우드 포메이션 진행 확인\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d3b427",
+   "id": "bac9ac20",
    "metadata": {},
    "source": [
     "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6b0bd3",
+   "id": "861908be",
    "metadata": {},
    "source": [
     "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5948bc4f",
+   "id": "186c94fe",
    "metadata": {},
    "source": [
     "![service_catalog.png](img2/service_catalog.png)"
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90dd8767",
+   "id": "3e3e6086",
    "metadata": {},
    "source": [
     "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
@@ -537,20 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3719b618",
+   "execution_count": 9,
+   "id": "41893fd4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-TZJUZRD0GNHE\n",
+      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::018763497627:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-L007B1T6D5JQ\n",
       "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1GNOW6L20RNJG\n",
+      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::018763497627:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1T23IO57M4AV1\n",
       "\n",
-      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n",
-      "mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR : Additional policies attached\n"
+      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W\n",
+      "mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W : Additional policies attached to cleanup later\n"
      ]
     }
    ],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69b8ff6",
+   "id": "358a8952",
    "metadata": {},
    "source": [
     "# 4. Next\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f184c5b8",
+   "id": "6e65f603",
    "metadata": {},
    "source": [
     "---\n",
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24f21cb",
+   "id": "af9223de",
    "metadata": {},
    "source": [
     "## A.1. sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
@@ -677,28 +677,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "38be9fe8",
-   "metadata": {},
-   "source": [
-    "## A.2. 포트폴리오 및 프러덕트 배포시 에러\n",
-    "- 서율리젼에서 진행싱 ProductLaunchRoleConstraint 생성시에 에러 발생. 원인을 찾지 못함. \n",
-    "    - 시드니 리젼에서 실행하니 에러 발생 하지 않음. \n",
-    "    - 조금 더 원인 파악이 필요 함.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e9e5d6d",
-   "metadata": {},
-   "source": [
-    "![error-deploy-portfolio-product.png](img2/error-deploy-portfolio-product.png)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6854f5",
+   "id": "c6147e17",
    "metadata": {},
    "outputs": [],
    "source": []
