add trouble shooting

--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9df11c84",
+   "id": "7a56e825",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf8052f",
+   "id": "c1a847ff",
    "metadata": {},
    "source": [
     "# 0. 기존 변수 로딩"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "987968ec",
+   "id": "0ddb8ece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4954ae46",
+   "id": "b334d147",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412c9928",
+   "id": "bbf2adb1",
    "metadata": {},
    "source": [
     "## 1.1 sm-project-sc-portfolio.yaml  파일 다운로드 \n",
@@ -58,15 +58,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8edd99e9",
+   "id": "e8f41892",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-07 05:59:28       7210 sm-project-sc-portfolio.yaml\n",
-      "download: s3://sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
+      "2022-02-07 12:26:43       7205 sm-project-sc-portfolio.yaml\n",
+      "download: s3://sagemaker-us-east-1-627616086164/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a9fcf3",
+   "id": "7d35a8db",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0893a1ca",
+   "id": "473d6379",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e3d230",
+   "id": "bd4d431b",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 파라미터\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f69a4e8",
+   "id": "44c0f778",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f69abf",
+   "id": "660bb12c",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 생성될 리소스\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "685644b4",
+   "id": "0563ddf0",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
       "        \u001b[94mDescription\u001b[39;49;00m: SageMaker project to transform and ingest features into a feature\n",
       "          group\n",
       "        \u001b[94mInfo\u001b[39;49;00m:\n",
-      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
+      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-us-east-1-627616086164/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
       "      \u001b[94mTags\u001b[39;49;00m:\n",
       "      - \u001b[94mKey\u001b[39;49;00m: sagemaker:studio-visibility\n",
       "        \u001b[94mValue\u001b[39;49;00m: \u001b[33m'\u001b[39;49;00m\u001b[33mtrue\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\n"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2a5951",
+   "id": "2f69f652",
    "metadata": {},
    "source": [
     "## 1.3 이외 생성될 리소스\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da6ca511",
+   "id": "064f538d",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f45f394",
+   "id": "a0149747",
    "metadata": {},
    "source": [
     "# 2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e896ef77",
+   "id": "8c1af08c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "58d7a754",
+   "execution_count": 10,
+   "id": "e6ee3291",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bucket_name : sagemaker-ap-northeast-2-018763497627\n",
+      "bucket_name : sagemaker-us-east-1-627616086164\n",
       "stack_name : sm-project-sc-portfolio\n",
-      "Bucket Region : ap-northeast-2\n",
-      "SageMaker Studio Domain ID : d-lnzveulicvk5\n",
-      "SageMaker Execution Role : arn:aws:iam::018763497627:role/mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W\n",
-      "CF File:  : https://s3.ap-northeast-2.amazonaws.com/sagemaker-ap-northeast-2-018763497627/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+      "Bucket Region : us-east-1\n",
+      "SageMaker Studio Domain ID : d-qlke3qpg5lek\n",
+      "SageMaker Execution Role : arn:aws:iam::627616086164:role/mod-6297809195fe4845-SageMakerExecutionRole-1BEMVGZB3KC6H\n",
+      "CF File:  : https://s3.us-east-1.amazonaws.com/sagemaker-us-east-1-627616086164/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
       "{\n",
-      "    \"StackId\": \"arn:aws:cloudformation:ap-northeast-2:018763497627:stack/sm-project-sc-portfolio/eb812c80-87e3-11ec-88ff-063ffc34a318\"\n",
+      "    \"StackId\": \"arn:aws:cloudformation:us-east-1:627616086164:stack/sm-project-sc-portfolio/babd4330-8811-11ec-ae7e-12732f42e421\"\n",
       "}\n"
      ]
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "326a28c5",
+   "id": "4aba989e",
    "metadata": {},
    "source": [
     "## 2.1 클라우드 포메이션 진행 확인\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac9ac20",
+   "id": "d7865ec8",
    "metadata": {},
    "source": [
     "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861908be",
+   "id": "50910405",
    "metadata": {},
    "source": [
     "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186c94fe",
+   "id": "66cb5188",
    "metadata": {},
    "source": [
     "![service_catalog.png](img2/service_catalog.png)"
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3e6086",
+   "id": "0a3e6e8f",
    "metadata": {},
    "source": [
     "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
@@ -537,20 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "41893fd4",
+   "execution_count": 11,
+   "id": "78f0b71b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::018763497627:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-L007B1T6D5JQ\n",
+      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::627616086164:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-1ELCY7G3Q44HC\n",
       "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::018763497627:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1T23IO57M4AV1\n",
+      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::627616086164:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-X02MZ0KBMA39\n",
       "\n",
-      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W\n",
-      "mod-6297809195fe4845-SageMakerExecutionRole-1A1EDDFAJER7W : Additional policies attached to cleanup later\n"
+      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1BEMVGZB3KC6H\n",
+      "mod-6297809195fe4845-SageMakerExecutionRole-1BEMVGZB3KC6H : Additional policies attached to cleanup later\n"
      ]
     }
    ],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358a8952",
+   "id": "72cf22c3",
    "metadata": {},
    "source": [
     "# 4. Next\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e65f603",
+   "id": "8073c1fa",
    "metadata": {},
    "source": [
     "---\n",
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9223de",
+   "id": "213cd949",
    "metadata": {},
    "source": [
     "## A.1. sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
@@ -677,9 +677,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8a430b8",
+   "metadata": {},
+   "source": [
+    "## A.2  sm-project-sc-portfolio.yaml 배포시 에러\n",
+    "\n",
+    "![deploy_error](img2/error-deploy-portfolio-product.png)\n",
+    "\n",
+    "위의 현상이 간헐적으로 발생합니다. 이경우에 스택을 다시 지우고 다시 생성을 시도 하세요.\n",
+    "- 이유는 인터널 에러로 추정 됩니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6147e17",
+   "id": "e7f6a8ee",
    "metadata": {},
    "outputs": [],
    "source": []
